Fixed content and fixed header jump

--- a/estilo.css
+++ b/estilo.css
@@ -24,6 +24,10 @@ a:hover {
   background: #1e1e1e;
 }
 
+.banner.fixed-header {
+  padding-bottom: 38px;
+}
+
 .banner .logo {
   padding: 20px;
 }
@@ -73,6 +77,18 @@ a:hover {
 .navigation-menu .social-links img {
   height: 20px;
   margin-left: 5px;
+}
+
+.navigation-menu .social-links img.facebook {
+  margin-right: -6px;
+}
+
+.content {
+  background: #003c69;
+  margin: 0 40px;
+  margin-top: calc(100vh - 228px - 160px);
+  padding: 40px 0;
+  border-radius: 5px;
 }
 
 foot {
